# auditory-deep-dreamer

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_docker_images.sh  conda-env.yml  config.yml  docker-compose.yml  model_settings.csv  pyproject.toml  requirements.txt
.aim/: run_metadata.sqlite
docker-files/: .dockerignore  Dockerfile.aim  Dockerfile.jupyter  Dockerfile.py_runner
journal/: research__material.md  week1.md
jupyter-notebooks/: 01_cat_and_dog_classification.ipynb  02_audio_mel_encoding_and_reversal_example.ipynb  03_deep_dream_tensorflow_tutorial.ipynb  04_deep_dream_spectorgram_with_inception_model.ipynb  04_deep_dream_spectrogram.ipynb  05_prepare_data.ipynb  06_basic_classifier.ipynb  07_audio_pre_processing_pipeline.ipynb  08_loading_speed_test.ipynb  09_data_generator_test.ipynb  09_kapre_output_to_audio.ipynb  10_data_generator_test.ipynb  10_dataframe_tests.ipynb  11_data_generator_and_model_test.ipynb  12_audio_deepdream_model.ipynb  12_check_dataset.ipynb  12_training_loop_test.ipynb  13_audio_feature_extraction.ipynb  14_filter_visualization.ipynb  15_audio_deep_dream_experiments.ipynb  15_audio_feature_visualization.ipynb  16_audio_deep_dream_experiments.ipynb  17_audio_deep_dream_experiments.ipynb  1_cat_and_dog_classification.ipynb  2_audio_mel_encoding_and_reversal_example.ipynb  3_deep_dream_tensorflow_tutorial.ipynb  4_deep_dream_spectrogram.ipynb  5_prepare_data.ipynb  6_basic_classifier.ipynb  7_audio_pre_processing_pipeline.ipynb  7_librosa_utils_examples.ipynb  8_data_generator_test.ipynb  8_loading_speed_test.ipynb  9_note_encoding_test.ipynb  audio_encoding.ipynb  audio_mel_encoding_and_reversal_example.ipynb  cat_and_dog_classification.ipynb  deep_dream_tensorflow_tutorial.ipynb  deepdream.ipynb  (+2 more)
(+51 files in other folders)
