[tool.poetry]
name = "auditory-deepdream"
version = "0.1.0"
description = ""
authors = ["Andrea Spiteri <aspit002@gold.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
